# teamspeak_bot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Pipfile  README.md  alembic.ini  bot.py  botv2.py  common.py  config.example.py  constants.py  cycle.py  docker-compose.yml  mypy.ini  pyproject.toml  requirements.txt  setup.py  ts3bot.example.env
commands/: __init__.py  api_key.py  guild.py  help.py  ignore.py  info.py  list_group_members.py  sheet.py  verify.py
docs/: commands.md
i18n/: de.json  en.json
test/: __main__.py  _base.py  sample_data.py  test_cycle.py  test_guild.py  test_sync_group.py
test/commands/: test_api_key.py
ts3bot/: __init__.py  __main__.py  bot.py  cmdparse.py  common.py  config.py  constants.py  cycle.py  events.py  legacy.py  utils.py
ts3bot/commands/: __init__.py  admin.py  api_key.py  guild.py  help.py  ignore.py  info.py  list_group_members.py  register.py  sheet.py  verify.py
ts3bot/database/: __init__.py  enums.py  models.py
ts3bot/database/migrations/: env.py
ts3bot/database/migrations/versions/: 2b6daf0b7566_add_is_leader_to_link_account_guild.py  40a5381846f2_init.py  c63d4a434956_alliances.py  db168dafe179_add_retry_count_to_account_table.py  fba1fdd7123a_add_account_guid.py
ts3bot/database/models/: __init__.py  account.py  base.py  guild.py  identity.py  link_account_guild.py  link_account_identity.py  world_group.py
ts3bot/i18n/: de.json  en.json
