[tool.poetry]
name = "ts3bot"
version = "0.1.1"
description = "A TeamSpeak bot for assigning server groups based on the user's world in Guild Wars 2."
authors = ["Yannick Linke <invisi@0x0f.net>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.7.7"
pydantic = { version = "^1.10.4", extras = ['dotenv'] }
python-i18n = "^0.3.9"
requests = "^2.27.1"
sentry-sdk = "*"
sqlalchemy = { version = "^1.4.0", extras = ['mysql'] }
ts3 = "2.0.0b3"

[tool.poetry.dev-dependencies]
requests-mock = "^1.9.3"
sqlalchemy-stubs = "^0.4"
coverage = "*"
types-requests = "^2.27.26"
types-setuptools = "^65.7.0.3"

[tool.black]
target-version = ['py310']

[tool.ruff]
fix = true
select = ["E", "F", "I", "UP", "N", "B", "Q", "PLC", "PLE", "PLR", "PLW"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"ts3bot/database/migrations/env.py" = ["E402"]
"ts3bot/__init__.py" = ["PLR2004"]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
